# QDSim

./: .gitignore  .readthedocs.yaml  ARCHITECTURAL_PROBLEMS_SOLUTIONS.md  CMakeLists.txt  CONTRIBUTING.md  CYTHON_MIGRATION_STATUS.md  CYTHON_TEST_REPORT.md  CYTHON_VALIDATION_REPORT.md  Doxyfile  FINAL_VALIDATION_SUMMARY.md  HONEST_OPEN_SYSTEM_ASSESSMENT.md  LICENSE  MANIFEST.in  PARALLEL_GPU_INCONSISTENCIES.md  README.md  README_SELF_CONSISTENT.md  README_old.md  UNIFIED_PARALLEL_ARCHITECTURE.md  build_cython.sh  check_cpp_module.py  check_module.py  check_module_detailed.py  comprehensive_2d_qd_tutorial.py  comprehensive_cython_test.py  comprehensive_integration_test.py  comprehensive_integration_tests.py  comprehensive_realistic_validation.py  consistent_mesh_viz.py  debug_matrix_assembly.py  final_working_example.py  fix_matrix_assembly.py  fix_vscode_venv.md  focused_realistic_validation.py  generate_2d_report.py  generate_deep_qd_report.py  interactive_aligned_viz.py  plot_wavefunctions.py  pyproject.toml  realistic_quantum_device_simulation.py  resolve_complex_eigenvalues.py  (+42 more)
backend/: CMakeLists.txt
backend/cmake/: FindNUMA.cmake
backend/include/: adaptive_mesh.h  adaptive_refinement.h  advanced_gpu_accelerator.h  async_gpu_execution_manager.h  bandgap_models.h  basic_solver.h  bindings.h  callback_system.h  carrier_statistics.h  cpu_memory_pool.h  custom_allocators.h  diagnostic_manager.h  error_estimator.h  error_handling.h  error_visualizer.h  fe_interpolator.h  fem.h  full_poisson_dd_solver.h  fused_gpu_kernels.cuh  gpu_accelerator.h  gpu_memory_pool.h  improved_self_consistent.h  input_validation.h  materials.h  matrix_cache.h  memory_compression.h  memory_efficient.h  memory_efficient_sparse.h  memory_manager.h  memory_mapped_matrix.h  mesh.h  mesh_quality.h  mobility_models.h  multi_level_cache.h  normalization.h  numa_allocator.h  paged_matrix.h  parallel_eigensolver.h  parallel_executor.h  physical_constants.h  (+20 more)
backend/src/: adaptive_mesh.cpp  adaptive_mesh_simple.cpp  adaptive_refinement.cpp  arena_allocator.cpp  async_gpu_execution_manager.cpp  bandgap_models.cpp  basic_solver.cpp  bindings.cpp  callback_system.cpp  carrier_statistics.cpp  cpu_memory_pool.cpp  diagnostic_manager.cpp  error_estimator.cpp  error_handling.cpp  error_visualizer.cpp  fe_interpolator.cpp  fe_interpolator_module.cpp  fem.cpp  full_poisson_dd_solver.cpp  fused_gpu_kernels.cu  gpu_accelerator.cpp  gpu_cusolver.cu  gpu_eigensolver.cu  gpu_kernels.cu  gpu_memory_pool.cpp  improved_self_consistent.cpp  materials.cpp  memory_compression.cpp  memory_efficient.cpp  memory_efficient_sparse.cpp  memory_mapped_file.cpp  memory_mapped_matrix.cpp  mesh.cpp  mesh_quality.cpp  mobility_models.cpp  normalization.cpp  numa_allocator.cpp  paged_matrix.cpp  parallel_eigensolver.cpp  physics.cpp  (+13 more)
backend/tests/: test_adaptive_mesh.cpp  test_fem.cpp  test_materials.cpp  test_mesh.cpp  test_normalization.cpp  test_physics.cpp  test_poisson.cpp  test_self_consistent.cpp  test_solver.cpp
config_samples/: batch_qd.yaml  simple_qd.json  simple_qd.yaml
deprecated/: ACTUAL_STATUS_REPORT.md  CYTHON_MIGRATION_SUMMARY.md  CYTHON_TEST_REPORT.md  CYTHON_VALIDATION_REPORT.md  EXECUTION_VALIDATION_GUIDE.md  FOCUSED_MIGRATION_PLAN.md  INCONSISTENCY_ANALYSIS.md  MIGRATION_PLAN.md  VALIDATION_STATUS_REPORT.md  __init__.py  build_cython_modules.py  comprehensive_2d_qd_example.py  comprehensive_validation.py  enhance_deep_qd_viz.py  final_2d_qd_example.py  fixed_coordinates_viz.py  generate_report.py  investigate_fem_methods.py  minimal_2d_qd_example.py  minimal_cython_test.pyx  performance_benchmark.py  qdsim_cli.py  quantum_simulation_test.py  real_backend_test.py  real_quantum_potential.py  real_schrodinger_solver.py  run_cython_tests.py  run_direct.py  run_simple.py  setup.py  setup_materials_only.py  setup_minimal.py  setup_minimal_test.py  setup_simple.py  simple_test.py  simulate_2d_qd_pn.py  test_alignment.py  test_backend_import.py  test_callback_eigensolvers.py  test_cpp_module.py  (+24 more)
docs/: DOCUMENTATION_GUIDE.md  Doxyfile  TESTING_GUIDE.md  conf.py  error_guide.md  index.rst  requirements.txt
examples/: adaptive_mesh_test.py  advanced_interactive_visualization.py  analysis_tools.py  basic_quantum_dot.py  bindings_example.py  callback_test.py  check_cpp_module.py  (+51 more)
tests/: CMakeLists.txt  README.md  adaptive_mesh_test.py  analyze_test_results.py.in  cpp_bindings_test.py  documentation_test.py  error_handling_test.py  fem_basic_test.py  fem_implementation_test.py  fem_interpolation_test.py  gpu_acceleration_test.py  memory_management_test.py  mesh_refinement_test.py  physical_accuracy_test.py  pn_junction_potential_test.py  run_comprehensive_tests.sh.in  self_consistent_solver_test.py  stress_tests.cpp  unified_architecture_integration_test.cpp
tests/benchmarks/: test_performance_benchmarks.py
tests/cpp/: test_carrier_statistics.cpp  test_mobility_models.cpp
tests/cross_platform_validation/: cuda_architecture_tests.cpp  mpi_implementation_tests.cpp
tests/cython/: final_cython_validation.py  simple_cython_test.py  test_actual_solvers_direct.py  test_complete_open_system_implementation.py  test_cython_functionality.py  test_working_cython.py
tests/examples/: comprehensive_working_example.py  fixed_working_examples.py  minimal_working_demonstration.py  realistic_quantum_simulation_with_actual_solvers.py  working_examples_with_results.py  working_open_system_example.py
tests/parallel_correctness/: gpu_memory_checker.cpp  thread_sanitizer_tests.cpp
tests/performance_benchmarking/: bandwidth_utilization_tests.cpp  scalability_tests.cpp
tests/templates/: cpp_test_template.cpp  python_test_template.py
tests/unit/: test_fem_implementation.py
tests/validation/: WORKING_OPEN_SYSTEM_VALIDATION.py  actual_open_system_validation.py  direct_open_system_check.py  simple_visualization_test.py  test_analytical_solutions.py  test_chromium_qd_algaas_pn_diode.py  validate_actual_solvers_working.py  validate_all_enhancements.py  validate_complete_cython_migration.py  validate_open_system_example.py
(+131 files in other folders)
