[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "Cython>=0.29.0",
    "numpy>=1.19.0",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[project]
name = "qdsim"
version = "2.0.0"
description = "Advanced Quantum Dot Simulator with Open System Support"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Dr. Mazharuddin Mohammed", email = "mazharuddin.mohammed.official@gmail.com"}
]
maintainers = [
    {name = "Dr. Mazharuddin Mohammed", email = "mazharuddin.mohammed.official@gmail.com"}
]
keywords = [
    "quantum mechanics",
    "quantum dots", 
    "semiconductor physics",
    "finite element method",
    "eigenvalue problems",
    "open quantum systems",
    "GPU acceleration",
    "scientific computing"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Cython",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.5.0", 
    "matplotlib>=3.3.0",
    "cython>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.800",
    "pre-commit>=2.15.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-tabs>=3.4.0",
    "myst-parser>=0.18.0",
    "nbsphinx>=0.8.0",
    "sphinx-autodoc-typehints>=1.19.0",
    "sphinx-gallery>=0.11.0",
]
gpu = [
    "cupy>=9.0.0",
    "pycuda>=2021.1",
]
all = [
    "qdsim[dev,docs,gpu]"
]

[project.urls]
Homepage = "https://github.com/your-username/QDSim"
Documentation = "https://qdsimx.readthedocs.io"
Repository = "https://github.com/your-username/QDSim.git"
"Bug Tracker" = "https://github.com/your-username/QDSim/issues"
Changelog = "https://github.com/your-username/QDSim/blob/main/CHANGELOG.md"

[project.scripts]
qdsim-validate = "qdsim_cython.validation:main"
qdsim-benchmark = "qdsim_cython.benchmark:main"

[tool.setuptools]
packages = ["qdsim_cython"]
include-package-data = true

[tool.setuptools.package-data]
qdsim_cython = ["*.pyx", "*.pxd", "*.h"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["qdsim_cython"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests as requiring GPU (deselect with '-m \"not gpu\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["qdsim_cython"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
