[metadata]
name = qdsim
version = 2.0.0
author = Dr. Mazharuddin Mohammed
author_email = mazharuddin.mohammed.official@gmail.com
description = Advanced Quantum Dot Simulator with Open System Support
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-username/QDSim
project_urls =
    Documentation = https://qdsimx.readthedocs.io
    Source = https://github.com/your-username/QDSim
    Tracker = https://github.com/your-username/QDSim/issues
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Cython
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.19.0
    scipy>=1.5.0
    matplotlib>=3.3.0

[options.packages.find]
exclude =
    tests*
    scripts*
    docs*

[options.extras_require]
dev =
    pytest>=6.0.0
    pytest-cov>=2.10.0
    black>=21.0.0
    flake8>=3.8.0
    mypy>=0.800
    pre-commit>=2.15.0
docs =
    sphinx>=5.0.0
    sphinx-rtd-theme>=1.2.0
    sphinx-copybutton>=0.5.0
    sphinx-tabs>=3.4.0
    myst-parser>=0.18.0
    nbsphinx>=0.8.0
    sphinx-autodoc-typehints>=1.19.0
    sphinx-gallery>=0.11.0
gpu =
    cupy>=9.0.0
    pycuda>=2021.1
cython =
    cython>=0.29.0
all =
    %(dev)s
    %(docs)s
    %(gpu)s
    %(cython)s

[options.entry_points]
console_scripts =
    qdsim-validate = qdsim_cython.validation:main
    qdsim-benchmark = qdsim_cython.benchmark:main
